--- a/page-2/index.html
+++ b/page-2/index.html
@@ -5,25 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- font awsome script -->
-    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+
     <!-- css linking -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stle.css">
     <!-- favicon icon -->
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <title>photographer portfolio</title>
+
+    <!-- bootstrap cdn link -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
-    <header class="thumbneil">
+    <header class="">
         <!-- navigation bar -->
         <nav>
             <div class="logo">
-                <a href="index.html"> <img src="images/logo.png" alt="folio roks logo"></a>
+                <a href="index.html"> <img src="../images/logo.png" alt="folio roks logo"></a>
             </div>
             <div class="navigation">
                 <ul>
-                    <li><a href="#">home </a></li>
+                    <li><a href="#">home <i class="fa-brands fa-facebook"></i></a></li>
                     <li><a href="#">about us</a></li>
                     <li><a href="#">survices</a></li>
                     <li><a href="#">gellary</a></li>
@@ -42,15 +45,42 @@
             </div>
         </nav>
         <!-- thumbneil text -->
-        <div class="intro">
-            <h2>creative & cleane</h2>
-            <h1>my name <span>yasin</span>.</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia soluta in doloremque magnam harum sapiente
-                quidem voluptates ut eaque totam! Lorem ipsum dolor sit amet consectetur.</p>
-            <div class="hire-me">
-                <button>hire me</button>
-                <i class="fa-solid fa-circle-play"></i>
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
             </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="../images/slider_img01.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="../images/slider_img02.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Second slide label</h5>
+                        <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                </div>
+
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
     </header>
     <!-- header in end -->
@@ -69,15 +99,15 @@
                 </div>
                 <div class="grid-photos">
 
-                    <img src="images/protfolio-img01.jpg" alt="">
-                    <img src="images/protfolio-img02.jpg" alt="">
-                    <img src="images/protfolio-img03.jpg" alt="">
-                    <img src="images/protfolio-img04.jpg" alt="">
-                    <img src="images/protfolio-img05.jpg" alt="">
-                    <img src="images/protfolio-img06.jpg" alt="">
-                    <img src="images/protfolio-img07.jpg" alt="">
-                    <img src="images/protfolio-img08.jpg" alt="">
-                    <img src="images/protfolio-img09.jpg" alt="">
+                    <img src="../images/protfolio-img01.jpg" alt="">
+                    <img src="../images/protfolio-img02.jpg" alt="">
+                    <img src="../images/protfolio-img03.jpg" alt="">
+                    <img src="../images/protfolio-img04.jpg" alt="">
+                    <img src="../images/protfolio-img05.jpg" alt="">
+                    <img src="../images/protfolio-img06.jpg" alt="">
+                    <img src="../images/protfolio-img07.jpg" alt="">
+                    <img src="../images/protfolio-img08.jpg" alt="">
+                    <img src="../images/protfolio-img09.jpg" alt="">
                 </div>
             </div>
         </section>
@@ -120,17 +150,17 @@
             </div>
             <div class="news-box">
                 <div class="news">
-                    <img src="images/inner_b1-370x238.jpg" alt="news card">
+                    <img src="../images/inner_b1-370x238.jpg" alt="news card">
                     <div class="news-text">
                         <h3>Monthly Web Development Up Cost Of JavaScript</h3><a href="#">see more...</a>
                     </div>
                 </div>
-                <div class="news"><img src="images/inner_b2-370x238.jpg" alt="news card">
+                <div class="news"><img src="../images/inner_b2-370x238.jpg" alt="news card">
                     <div class="news-text">
                         <h3>There are many you how this of like available.</h3><a href="#">see more...</a>
                     </div>
                 </div>
-                <div class="news"><img src="images/inner_b3-370x238.jpg" alt="news card">
+                <div class="news"><img src="../images/inner_b3-370x238.jpg" alt="news card">
                     <div class="news-text">
                         <h3>I must explain to you how this mistaken idea.</h3><a href="#">see more...</a>
                     </div>
@@ -149,6 +179,14 @@
         </div>
         <p>© ys coders product |2023</p>
     </footer>
+
+    <!-- bootstrap js link -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <!-- font awsome script -->
+    <script src="https://kit.fontaw esome.com/dbd74cafef.js" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
