--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- font awsome script -->
-    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/dbd74cafef.js" crossorigin="anonymous"></script>
     <!-- css linking -->
     <link rel="stylesheet" href="style.css">
     <!-- favicon icon -->
