--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="navigation">
                 <ul>
                     <li><a href="#">home </a></li>
-                    <li><a href="#">about us</a></li>
+                    <li><a href="page-2/index.html">about us</a></li>
                     <li><a href="#">survices</a></li>
                     <li><a href="#">gellary</a></li>
                     <li><a href="#">other pages</a></li>
