--- a/page-2/index.html
+++ b/page-2/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="navigation">
                 <ul>
-                    <li><a href="#">home <i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href="../index.html">home <i class="fa-brands fa-facebook"></i></a></li>
                     <li><a href="#">about us</a></li>
                     <li><a href="#">survices</a></li>
                     <li><a href="#">gellary</a></li>
@@ -57,15 +57,15 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="../images/slider_img01.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
+                    <div class=" margin-main carousel-caption d-none d-md-block">
+                        <h1 class="mb-5 display-1">our creative world</h1>
                         <p>Some representative placeholder content for the first slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="../images/slider_img02.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
+                    <div class="margin-main carousel-caption d-none d-md-block">
+                        <h1 class="mb-5 display-1">our creative world</h1>
                         <p>Some representative placeholder content for the second slide.</p>
                     </div>
                 </div>
